# mahboi

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
.github/: check-basic-style.sh
.github/workflows/: ci.yml
core/: Cargo.toml  build.rs
core/roms/: README.md  build-minimal-bios.sh  input-lag.s  minimal-bios.s
core/src/: cartridge.rs  env.rs  instr.rs  lib.rs  log.rs  primitives.rs
core/src/analyze/: cfg.rs  instr.rs  mod.rs  util.rs
core/src/machine/: cpu.rs  dma.rs  input.rs  instr.rs  interrupt.rs  macros.rs  mm.rs  mod.rs  ppu.rs  sound.rs  step.rs  timer.rs
core/src/mbc/: mbc1.rs  mbc3.rs  mbc5.rs  mod.rs  no_mbc.rs
desktop/: Cargo.toml  README.md
desktop/src/: args.rs  debug.rs  emu.rs  env.rs  input.rs  main.rs  render.rs  timer.rs
desktop/src/debug/: dummy_tui.rs  log_view.rs  mod.rs  simple.rs  tab_view.rs
desktop/src/debug/tui/: asm_view.rs  log_view.rs  mem_view.rs  mod.rs  tab_view.rs  util.rs
desktop/src/shader/: simple.frag  simple.vert
testroms/: .gitignore  download.sh
web/: .gitignore  Cargo.toml  README.md  build-all.rs  package.json  tsconfig.json  watch.sh
web/public/: index.html  main.css
web/src/: lib.rs  main.ts
web/static/: index.html  main.css
