[package]
name = "mahboi-desktop"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6.0"
failure = "0.1.2"
hex = "0.3.2"
lazy_static = "1.1"
log = { version = "0.4", features = ["release_max_level_debug"] }
mahboi = { path = "../core" }
structopt = "0.2"
unicode-width = "0.1.5"
spin_sleep = "0.3"
vulkano = "0.13"
vulkano-shaders = "0.13"
vulkano-win = "0.13"
winit = "0.19"

[target.'cfg(not(windows))'.dependencies]
cursive = "0.12.0"
ncurses = "5"
