[package]
name = "mahboi-desktop"
version = "0.1.0"
authors = [
    "Lukas Kalbertodt <lukas.kalbertodt@gmail.com>",
    "Johan M. von Behren <johan@vonbehren.eu>",
]
edition = "2018"

[dependencies]
cpal = "0.14"
failure = "0.1.2"
lazy_static = "1.4"
log = { version = "0.4", features = ["release_max_level_debug"] }
mahboi = { path = "../core" }
pixels = "0.3"
structopt = "0.3"
unicode-width = "0.1.5"
winit = "0.25"
winit_input_helper = "0.10"

[target.'cfg(not(windows))'.dependencies]
cursive = "0.15.0"
ncurses = "5"
